--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <title>T&T TELETOP</title>
     <style>
         * {
@@ -18,6 +21,7 @@
         }
 
         .container {
+            position: relative;
             max-width: 1200px;
             margin: 0 auto;
         }
@@ -675,10 +679,26 @@
             color: rgba(69, 82, 64, 1);
         }
 
+        .relevance_of_the_check {
+            position: absolute;
+            font-family: Inter;
+            top: 38px;
+            right: -20px;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 14.52px;
+        }
+
         @media (max-width:576px) {
             .container {
                 width: 100%;
                 padding: 0 20px;
+            }
+
+            .relevance_of_the_check {
+                top: 20px;
+                right: 17px;
+                font-size: 10px;
             }
 
             .channel {
@@ -1153,6 +1173,10 @@
 <body>
     
     <div class="container">
+        <div class="relevance_of_the_check">
+            <p>Актуальность проверки</p>
+            <p>14.10.2024: Время: 15:06</p>
+        </div>
 
         <main class="channels_block">
             <img class="logo" src="logo.png" alt="Лого">
